# The-Sentinel

./: .coverage  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  PROJECT_CONTEXT.md  README.md  docker-compose.yml  main.py  mutation.Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
.githooks/: pre-commit
.github/workflows/: ci.yml
sentinel/: application.py
sentinel.egg-info/: PKG-INFO  SOURCES.txt
sentinel/api/: delivery_dedup.py  health_controller.py  metrics_controller.py  webhook_controller.py  webhook_security.py
sentinel/application/: audit_orchestrator.py  report_service.py  risk_engine.py
sentinel/config/: __init__.py  settings.py
sentinel/monitoring/: __init__.py  logger.py  metrics.py
sentinel/tests/: test_architecture_integrity.py  test_audit_orchestrator_phase4.py  test_check_payload.py  test_contract_schema.py  test_debt_service.py  test_delivery_dedup.py  test_document_service.py  test_explain_issue_safe.py  test_github_client.py  test_llm_base.py  test_llm_integration.py  test_llm_service_edge_cases.py  test_metrics.py  test_nim_provider.py  test_nim_provider_mocked.py  test_openai_provider_mocked.py  test_performance.py  test_queue_stress.py  test_redis_delivery_dedup.py  test_redis_job_queue.py  test_report_service_phase4.py  test_risk_engine.py  test_risk_engine_security_integration.py  test_security_edge_cases.py  test_security_service.py  test_semantic_chunking.py  test_semantic_integration.py  test_semantic_service.py  test_settings.py  test_stabilization_hardening.py  test_translator.py  (+9 more)
(+36 files in other folders)
