[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["sentinel/tests"]
python_files = ["test_*.py"]
addopts = "-q"

[tool.mutmut]
paths_to_mutate = "sentinel/domain/,sentinel/application/,sentinel/infrastructure/"
tests_dir = "sentinel/tests/"
runner = "python -m pytest -x --tb=short"
